antlr/YarnParser.js
// Generated from YarnParser.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var YarnParserListener = require('./YarnParserListener').YarnParserListener;
var grammarFileName = "YarnParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'---'", "'title:'", "'tags:'", null, "':'", 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, "'==='", null, null, 
                     "'\u001D'", "'\u001E'", null, null, null, null, null, 
                     null, null, "'[['", null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, "'+='", 
                     "'-='", "'*='", "'%='", "'/='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'('", "')'", null, null, null, null, 
                     null, null, "'|'", null, "']]'" ];

var symbolicNames = [ null, "BODY_ENTER", "HEADER_TITLE", "HEADER_TAGS", 
                      "HEADER_NAME", "HEADER_SEPARATOR", "STRING", "ID", 
                      "NEWLINE", "UNKNOWN", "TITLE_TEXT", "TITLE_TAG_END", 
                      "TAG_TEXT", "TAG_DELIMIT", "HEADER_TAG_END", "HEADER_TEXT", 
                      "HEADER_END", "BLANK_STATEMENT", "WS_IN_BODY", "COMMENT", 
                      "BODY_CLOSE", "TEXT_STRING", "SHORTCUT_ENTER", "INDENT", 
                      "DEDENT", "COMMAND_IF", "COMMAND_ELSE", "COMMAND_ELSE_IF", 
                      "COMMAND_ENDIF", "COMMAND_SET", "COMMAND_FUNC", "COMMAND_OPEN", 
                      "OPTION_ENTER", "HASHTAG", "TEXT", "COMMAND_WS", "COMMAND_CLOSE", 
                      "COMMAND_STRING", "KEYWORD_IF", "KEYWORD_ELSE", "KEYWORD_ELSE_IF", 
                      "KEYWORD_SET", "KEYWORD_TRUE", "KEYWORD_FALSE", "KEYWORD_NULL", 
                      "KEYWORD_TO", "OPERATOR_LOGICAL_LESS_THAN_EQUALS", 
                      "OPERATOR_LOGICAL_GREATER_THAN_EQUALS", "OPERATOR_LOGICAL_EQUALS", 
                      "OPERATOR_LOGICAL_LESS", "OPERATOR_LOGICAL_GREATER", 
                      "OPERATOR_LOGICAL_NOT_EQUALS", "OPERATOR_LOGICAL_AND", 
                      "OPERATOR_LOGICAL_OR", "OPERATOR_LOGICAL_XOR", "OPERATOR_LOGICAL_NOT", 
                      "OPERATOR_MATHS_ADDITION_EQUALS", "OPERATOR_MATHS_SUBTRACTION_EQUALS", 
                      "OPERATOR_MATHS_MULTIPLICATION_EQUALS", "OPERATOR_MATHS_MODULUS_EQUALS", 
                      "OPERATOR_MATHS_DIVISION_EQUALS", "OPERATOR_MATHS_ADDITION", 
                      "OPERATOR_MATHS_SUBTRACTION", "OPERATOR_MATHS_MULTIPLICATION", 
                      "OPERATOR_MATHS_DIVISION", "OPERATOR_MATHS_MODULUS", 
                      "LPAREN", "RPAREN", "COMMA", "VAR_ID", "BODY_NUMBER", 
                      "FUNC_ID", "COMMAND_UNKNOWN", "ACTION", "OPTION_SEPARATOR", 
                      "OPTION_TEXT", "OPTION_CLOSE", "OPTION_LINK" ];

var ruleNames =  [ "dialogue", "node", "header", "header_title", "header_tag_name", 
                   "header_tag", "header_line", "body", "statement", "shortcut", 
                   "if_statement", "if_clause", "else_if_clause", "else_clause", 
                   "set_statement", "option_statement", "func_call", "func_call_statement", 
                   "action_statement", "text", "line_statement", "blank_statement", 
                   "hashtag_block", "hashtag", "expression", "value", "variable" ];

function YarnParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

YarnParser.prototype = Object.create(antlr4.Parser.prototype);
YarnParser.prototype.constructor = YarnParser;

Object.defineProperty(YarnParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

YarnParser.EOF = antlr4.Token.EOF;
YarnParser.BODY_ENTER = 1;
YarnParser.HEADER_TITLE = 2;
YarnParser.HEADER_TAGS = 3;
YarnParser.HEADER_NAME = 4;
YarnParser.HEADER_SEPARATOR = 5;
YarnParser.STRING = 6;
YarnParser.ID = 7;
YarnParser.NEWLINE = 8;
YarnParser.UNKNOWN = 9;
YarnParser.TITLE_TEXT = 10;
YarnParser.TITLE_TAG_END = 11;
YarnParser.TAG_TEXT = 12;
YarnParser.TAG_DELIMIT = 13;
YarnParser.HEADER_TAG_END = 14;
YarnParser.HEADER_TEXT = 15;
YarnParser.HEADER_END = 16;
YarnParser.BLANK_STATEMENT = 17;
YarnParser.WS_IN_BODY = 18;
YarnParser.COMMENT = 19;
YarnParser.BODY_CLOSE = 20;
YarnParser.TEXT_STRING = 21;
YarnParser.SHORTCUT_ENTER = 22;
YarnParser.INDENT = 23;
YarnParser.DEDENT = 24;
YarnParser.COMMAND_IF = 25;
YarnParser.COMMAND_ELSE = 26;
YarnParser.COMMAND_ELSE_IF = 27;
YarnParser.COMMAND_ENDIF = 28;
YarnParser.COMMAND_SET = 29;
YarnParser.COMMAND_FUNC = 30;
YarnParser.COMMAND_OPEN = 31;
YarnParser.OPTION_ENTER = 32;
YarnParser.HASHTAG = 33;
YarnParser.TEXT = 34;
YarnParser.COMMAND_WS = 35;
YarnParser.COMMAND_CLOSE = 36;
YarnParser.COMMAND_STRING = 37;
YarnParser.KEYWORD_IF = 38;
YarnParser.KEYWORD_ELSE = 39;
YarnParser.KEYWORD_ELSE_IF = 40;
YarnParser.KEYWORD_SET = 41;
YarnParser.KEYWORD_TRUE = 42;
YarnParser.KEYWORD_FALSE = 43;
YarnParser.KEYWORD_NULL = 44;
YarnParser.KEYWORD_TO = 45;
YarnParser.OPERATOR_LOGICAL_LESS_THAN_EQUALS = 46;
YarnParser.OPERATOR_LOGICAL_GREATER_THAN_EQUALS = 47;
YarnParser.OPERATOR_LOGICAL_EQUALS = 48;
YarnParser.OPERATOR_LOGICAL_LESS = 49;
YarnParser.OPERATOR_LOGICAL_GREATER = 50;
YarnParser.OPERATOR_LOGICAL_NOT_EQUALS = 51;
YarnParser.OPERATOR_LOGICAL_AND = 52;
YarnParser.OPERATOR_LOGICAL_OR = 53;
YarnParser.OPERATOR_LOGICAL_XOR = 54;
YarnParser.OPERATOR_LOGICAL_NOT = 55;
YarnParser.OPERATOR_MATHS_ADDITION_EQUALS = 56;
YarnParser.OPERATOR_MATHS_SUBTRACTION_EQUALS = 57;
YarnParser.OPERATOR_MATHS_MULTIPLICATION_EQUALS = 58;
YarnParser.OPERATOR_MATHS_MODULUS_EQUALS = 59;
YarnParser.OPERATOR_MATHS_DIVISION_EQUALS = 60;
YarnParser.OPERATOR_MATHS_ADDITION = 61;
YarnParser.OPERATOR_MATHS_SUBTRACTION = 62;
YarnParser.OPERATOR_MATHS_MULTIPLICATION = 63;
YarnParser.OPERATOR_MATHS_DIVISION = 64;
YarnParser.OPERATOR_MATHS_MODULUS = 65;
YarnParser.LPAREN = 66;
YarnParser.RPAREN = 67;
YarnParser.COMMA = 68;
YarnParser.VAR_ID = 69;
YarnParser.BODY_NUMBER = 70;
YarnParser.FUNC_ID = 71;
YarnParser.COMMAND_UNKNOWN = 72;
YarnParser.ACTION = 73;
YarnParser.OPTION_SEPARATOR = 74;
YarnParser.OPTION_TEXT = 75;
YarnParser.OPTION_CLOSE = 76;
YarnParser.OPTION_LINK = 77;

YarnParser.RULE_dialogue = 0;
YarnParser.RULE_node = 1;
YarnParser.RULE_header = 2;
YarnParser.RULE_header_title = 3;
YarnParser.RULE_header_tag_name = 4;
YarnParser.RULE_header_tag = 5;
YarnParser.RULE_header_line = 6;
YarnParser.RULE_body = 7;
YarnParser.RULE_statement = 8;
YarnParser.RULE_shortcut = 9;
YarnParser.RULE_if_statement = 10;
YarnParser.RULE_if_clause = 11;
YarnParser.RULE_else_if_clause = 12;
YarnParser.RULE_else_clause = 13;
YarnParser.RULE_set_statement = 14;
YarnParser.RULE_option_statement = 15;
YarnParser.RULE_func_call = 16;
YarnParser.RULE_func_call_statement = 17;
YarnParser.RULE_action_statement = 18;
YarnParser.RULE_text = 19;
YarnParser.RULE_line_statement = 20;
YarnParser.RULE_blank_statement = 21;
YarnParser.RULE_hashtag_block = 22;
YarnParser.RULE_hashtag = 23;
YarnParser.RULE_expression = 24;
YarnParser.RULE_value = 25;
YarnParser.RULE_variable = 26;

function DialogueContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YarnParser.RULE_dialogue;
    return this;
}

DialogueContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DialogueContext.prototype.constructor = DialogueContext;

DialogueContext.prototype.EOF = function() {
    return this.getToken(YarnParser.EOF, 0);
};

DialogueContext.prototype.node = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(NodeContext);
    } else {
        return this.getTypedRuleContext(NodeContext,i);
    }
};

DialogueContext.prototype.enterRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.enterDialogue(this);
	}
};

DialogueContext.prototype.exitRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.exitDialogue(this);
	}
};




YarnParser.DialogueContext = DialogueContext;

YarnParser.prototype.dialogue = function() {

    var localctx = new DialogueContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, YarnParser.RULE_dialogue);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 55; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 54;
            this.node();
            this.state = 57; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===YarnParser.HEADER_TITLE);
        this.state = 59;
        this.match(YarnParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NodeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YarnParser.RULE_node;
    return this;
}

NodeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NodeContext.prototype.constructor = NodeContext;

NodeContext.prototype.header = function() {
    return this.getTypedRuleContext(HeaderContext,0);
};

NodeContext.prototype.body = function() {
    return this.getTypedRuleContext(BodyContext,0);
};

NodeContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(YarnParser.NEWLINE);
    } else {
        return this.getToken(YarnParser.NEWLINE, i);
    }
};


NodeContext.prototype.enterRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.enterNode(this);
	}
};

NodeContext.prototype.exitRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.exitNode(this);
	}
};




YarnParser.NodeContext = NodeContext;

YarnParser.prototype.node = function() {

    var localctx = new NodeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, YarnParser.RULE_node);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 61;
        this.header();
        this.state = 62;
        this.body();
        this.state = 66;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===YarnParser.NEWLINE) {
            this.state = 63;
            this.match(YarnParser.NEWLINE);
            this.state = 68;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function HeaderContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YarnParser.RULE_header;
    return this;
}

HeaderContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HeaderContext.prototype.constructor = HeaderContext;

HeaderContext.prototype.header_title = function() {
    return this.getTypedRuleContext(Header_titleContext,0);
};

HeaderContext.prototype.header_tag = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Header_tagContext);
    } else {
        return this.getTypedRuleContext(Header_tagContext,i);
    }
};

HeaderContext.prototype.header_line = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Header_lineContext);
    } else {
        return this.getTypedRuleContext(Header_lineContext,i);
    }
};

HeaderContext.prototype.enterRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.enterHeader(this);
	}
};

HeaderContext.prototype.exitRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.exitHeader(this);
	}
};




YarnParser.HeaderContext = HeaderContext;

YarnParser.prototype.header = function() {

    var localctx = new HeaderContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, YarnParser.RULE_header);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this.header_title();
        this.state = 74;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===YarnParser.HEADER_TAGS || _la===YarnParser.HEADER_NAME) {
            this.state = 72;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case YarnParser.HEADER_TAGS:
                this.state = 70;
                this.header_tag();
                break;
            case YarnParser.HEADER_NAME:
                this.state = 71;
                this.header_line();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 76;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Header_titleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YarnParser.RULE_header_title;
    return this;
}

Header_titleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Header_titleContext.prototype.constructor = Header_titleContext;

Header_titleContext.prototype.HEADER_TITLE = function() {
    return this.getToken(YarnParser.HEADER_TITLE, 0);
};

Header_titleContext.prototype.TITLE_TEXT = function() {
    return this.getToken(YarnParser.TITLE_TEXT, 0);
};

Header_titleContext.prototype.TITLE_TAG_END = function() {
    return this.getToken(YarnParser.TITLE_TAG_END, 0);
};

Header_titleContext.prototype.enterRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.enterHeader_title(this);
	}
};

Header_titleContext.prototype.exitRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.exitHeader_title(this);
	}
};




YarnParser.Header_titleContext = Header_titleContext;

YarnParser.prototype.header_title = function() {

    var localctx = new Header_titleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, YarnParser.RULE_header_title);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 77;
        this.match(YarnParser.HEADER_TITLE);
        this.state = 78;
        this.match(YarnParser.TITLE_TEXT);
        this.state = 79;
        this.match(YarnParser.TITLE_TAG_END);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Header_tag_nameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YarnParser.RULE_header_tag_name;
    return this;
}

Header_tag_nameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Header_tag_nameContext.prototype.constructor = Header_tag_nameContext;

Header_tag_nameContext.prototype.TAG_TEXT = function() {
    return this.getToken(YarnParser.TAG_TEXT, 0);
};

Header_tag_nameContext.prototype.TAG_DELIMIT = function() {
    return this.getToken(YarnParser.TAG_DELIMIT, 0);
};

Header_tag_nameContext.prototype.enterRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.enterHeader_tag_name(this);
	}
};

Header_tag_nameContext.prototype.exitRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.exitHeader_tag_name(this);
	}
};




YarnParser.Header_tag_nameContext = Header_tag_nameContext;

YarnParser.prototype.header_tag_name = function() {

    var localctx = new Header_tag_nameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, YarnParser.RULE_header_tag_name);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 81;
        this.match(YarnParser.TAG_TEXT);
        this.state = 83;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===YarnParser.TAG_DELIMIT) {
            this.state = 82;
            this.match(YarnParser.TAG_DELIMIT);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Header_tagContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YarnParser.RULE_header_tag;
    return this;
}

Header_tagContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Header_tagContext.prototype.constructor = Header_tagContext;

Header_tagContext.prototype.HEADER_TAGS = function() {
    return this.getToken(YarnParser.HEADER_TAGS, 0);
};

Header_tagContext.prototype.HEADER_TAG_END = function() {
    return this.getToken(YarnParser.HEADER_TAG_END, 0);
};

Header_tagContext.prototype.header_tag_name = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Header_tag_nameContext);
    } else {
        return this.getTypedRuleContext(Header_tag_nameContext,i);
    }
};

Header_tagContext.prototype.enterRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.enterHeader_tag(this);
	}
};

Header_tagContext.prototype.exitRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.exitHeader_tag(this);
	}
};




YarnParser.Header_tagContext = Header_tagContext;

YarnParser.prototype.header_tag = function() {

    var localctx = new Header_tagContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, YarnParser.RULE_header_tag);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 85;
        this.match(YarnParser.HEADER_TAGS);
        this.state = 89;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===YarnParser.TAG_TEXT) {
            this.state = 86;
            this.header_tag_name();
            this.state = 91;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 92;
        this.match(YarnParser.HEADER_TAG_END);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Header_lineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YarnParser.RULE_header_line;
    return this;
}

Header_lineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Header_lineContext.prototype.constructor = Header_lineContext;

Header_lineContext.prototype.HEADER_NAME = function() {
    return this.getToken(YarnParser.HEADER_NAME, 0);
};

Header_lineContext.prototype.HEADER_TEXT = function() {
    return this.getToken(YarnParser.HEADER_TEXT, 0);
};

Header_lineContext.prototype.HEADER_END = function() {
    return this.getToken(YarnParser.HEADER_END, 0);
};

Header_lineContext.prototype.enterRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.enterHeader_line(this);
	}
};

Header_lineContext.prototype.exitRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.exitHeader_line(this);
	}
};




YarnParser.Header_lineContext = Header_lineContext;

YarnParser.prototype.header_line = function() {

    var localctx = new Header_lineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, YarnParser.RULE_header_line);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 94;
        this.match(YarnParser.HEADER_NAME);
        this.state = 95;
        this.match(YarnParser.HEADER_SEPARATOR);
        this.state = 96;
        this.match(YarnParser.HEADER_TEXT);
        this.state = 97;
        this.match(YarnParser.HEADER_END);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YarnParser.RULE_body;
    return this;
}

BodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BodyContext.prototype.constructor = BodyContext;

BodyContext.prototype.BODY_ENTER = function() {
    return this.getToken(YarnParser.BODY_ENTER, 0);
};

BodyContext.prototype.BODY_CLOSE = function() {
    return this.getToken(YarnParser.BODY_CLOSE, 0);
};

BodyContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

BodyContext.prototype.enterRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.enterBody(this);
	}
};

BodyContext.prototype.exitRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.exitBody(this);
	}
};




YarnParser.BodyContext = BodyContext;

YarnParser.prototype.body = function() {

    var localctx = new BodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, YarnParser.RULE_body);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 99;
        this.match(YarnParser.BODY_ENTER);
        this.state = 103;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 17)) & ~0x1f) == 0 && ((1 << (_la - 17)) & ((1 << (YarnParser.BLANK_STATEMENT - 17)) | (1 << (YarnParser.TEXT_STRING - 17)) | (1 << (YarnParser.SHORTCUT_ENTER - 17)) | (1 << (YarnParser.COMMAND_IF - 17)) | (1 << (YarnParser.COMMAND_SET - 17)) | (1 << (YarnParser.COMMAND_FUNC - 17)) | (1 << (YarnParser.OPTION_ENTER - 17)) | (1 << (YarnParser.TEXT - 17)))) !== 0) || _la===YarnParser.ACTION) {
            this.state = 100;
            this.statement();
            this.state = 105;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 106;
        this.match(YarnParser.BODY_CLOSE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = YarnParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.shortcut = function() {
    return this.getTypedRuleContext(ShortcutContext,0);
};

StatementContext.prototype.if_statement = function() {
    return this.getTypedRuleContext(If_statementContext,0);
};

StatementContext.prototype.set_statement = function() {
    return this.getTypedRuleContext(Set_statementContext,0);
};

StatementContext.prototype.option_statement = function() {
    return this.getTypedRuleContext(Option_statementContext,0);
};

StatementContext.prototype.func_call_statement = function() {
    return this.getTypedRuleContext(Func_call_statementContext,0);
};

StatementContext.prototype.action_statement = function() {
    return this.getTypedRuleContext(Action_statementContext,0);
};

StatementContext.prototype.line_statement = function() {
    return this.getTypedRuleContext(Line_statementContext,0);
};

StatementContext.prototype.blank_statement = function() {
    return this.getTypedRuleContext(Blank_statementContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof YarnParserListener ) {
        listener.exitStatement(this);
	}
};




YarnParser.StatementContext = StatementContext;

YarnParser.prototype.statement = function() {
